--- a/app/templates/inc/online_test.html
+++ b/app/templates/inc/online_test.html
@@ -1,8 +1,8 @@
 <!-- Online Test Box -->
-<section id="online-test" class="content-section">
+<section id="online-test" class="">
 
     <div class="container my-5">
-        <div class="row featurette">
+        <div class="row bg-light content-section">
 
             <div class="col-md-6 text-center mb-4">
                 <h2 class="font-weight-bold text-primary">
