--- a/app/templates/inc/jumbotron.html
+++ b/app/templates/inc/jumbotron.html
@@ -8,23 +8,23 @@
                 <p class="lead text-light">Usa MoOnitor <b>sin coste</b> y crea informes profesionales por <b>6€/mes</b></p>
 
                 <div class="d-flex justify-content-center justify-content-lg-start mb-3">
-                    <a href="#pricing" class="btn btn-primary btn-lg btn-cta me-3">Entra ya!</a>
-                    <a href="{{ url_for('register') }}" class="btn btn-secondary btn-lg me-3">Empezar gratis</a>
+                    <a href="#pricing" class="btn btn-primary btn-lg btn-cta me-3">Ver Precios</a>
+                    <a href="{{ url_for('register') }}" class="btn btn-secondary btn-lg me-3">Probar gratis</a>
                 </div>
 
                 <!-- Additional Benefits with Icons -->
                 <div class="d-flex justify-content-center justify-content-lg-start text-light">
                     <div class="benefit-icon me-5">
                         <i class="bi bi-credit-card fa-2x mb-2"></i>
-                        <p>No credit card required</p>
+                        <p>Sin datos de pago</p>
                     </div>
                     <div class="benefit-icon me-5">
                         <i class="bi bi-calendar-check fa-2x mb-2"></i>
-                        <p>30-day free trial</p>
+                        <p>Prueba ilimitada</p>
                     </div>
                     <div class="benefit-icon">
                         <i class="bi bi-x-circle fa-2x mb-2"></i>
-                        <p>Cancel anytime</p>
+                        <p>Sin letra pequeña</p>
                     </div>
                 </div>
             </div>
