--- a/app/templates/inc/suscriptions copy 3.html
+++ b/app/templates/inc/suscriptions copy 3.html
@@ -110,3 +110,7 @@ document.addEventListener('DOMContentLoaded', () => {
 toggle.addEventListener('change', updatePricing);
 
 </script>
+
+<style>
+
+</style>
