--- a/app/templates/inc/online_test.html
+++ b/app/templates/inc/online_test.html
@@ -48,3 +48,38 @@
         </div>
     </div>
 </section>
+
+<!-- old Online Test Box 
+<section id="online-test" class="content-section">
+
+    <div class="container my-5">
+        <div class="row featurette">
+            <div class="col-md-6 mb-3">
+                <h2>¡Analiza cualquier sitio!
+                </h2>
+                <p class="lead">Revisa +100 puntos clave en un mismo sitio y en segundos.</p>
+                <form action="/start" method="post" id="pageInfoForm">
+                    {{ form.csrf_token }}
+                    <div class="mb-3">
+                        {{ form.url.label(class="form-label") }}
+                        {{ form.url(class="form-control", id="url") }}
+                        {% for error in form.url.errors %}
+                        <small class="form-text text-danger">{{ error }}</small>
+                        {% endfor %}
+                    </div>
+                    <button type="submit" class="btn btn-primary" id="analizarBtn">
+                        <span id="btnText">MoOnitorizar!</span>
+                        <span id="loadingSpinner" class="spinner-border spinner-border-sm d-none" role="status"
+                            aria-hidden="true"></span>
+                    </button>
+                </form>
+
+            </div>
+            <div class="alert alert-info mt-4" role="alert">
+                <i class="fas fa-info-circle"></i> Your data is safe with us. We never store or share any of your
+                information.
+            </div>
+        </div>
+    </div>
+</section>
+-->
