--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -76,7 +76,7 @@
             <!-- Main Content -->
             <div class="col" id="main-content">
 
-                <div class="container _mt-5"> <!-- content -->
+                <div class="container mt-5"> <!-- content -->
                     {% include 'inc/flashmsg.html' %}
 
                     {% block content %}
@@ -90,7 +90,11 @@
         </div>
     </div>
 
-    {% include 'inc/helpdesk.html' %}
+    {% if current_user.subscription_plan == "Corporate" %}
+    <!-- help desk -->
+        {% include 'inc/helpdesk.html' %}
+        <!-- help desk -->
+    {% endif %}
 
     {% include 'inc/scripts.html' %}
 
