--- a/app/templates/base_full.html
+++ b/app/templates/base_full.html
@@ -76,7 +76,12 @@
         </div>
     </div>
 
-    {% include 'inc/helpdesk.html' %}
+    {% if current_user.subscription_plan == "Pro" %}
+    <!-- help desk -->
+        {% include 'inc/helpdesk.html' %}
+        <!-- help desk -->
+    {% endif %}
+
 
     {% include 'inc/scripts.html' %}
 
