--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -71,12 +71,12 @@
 
 
     <div class="container-fluid">
-        <div class="row">
+        <div class="row-0">
 
             <!-- Main Content -->
             <div class="col" id="main-content">
 
-                <div class="container mt-5"> <!-- content -->
+                <div class="container mt-0"> <!-- content -->
                     {% include 'inc/flashmsg.html' %}
 
                     {% block content %}
